--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start-dev": "nodemon ./bin/www",
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dompurify": "^2.0.12",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsdom": "^16.3.0",
+    "marked": "^1.1.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.20",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4"
