--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,13 +16,18 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "~4.16.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsdom": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^1.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.20",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
